--- a/build.gradle
+++ b/build.gradle
@@ -2,5 +2,35 @@
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+}
+
+ext{
+    kotlin_version = '1.7.20'
+    appcompat_version = "1.6.1"
+    core_ktx_version = "1.7.0"
+    constraint_version = "2.1.4"
+    legacy_support_version = "1.0.0"
+    junit_version = "4.13.2"
+    androidx_junit_version = "1.1.6"
+    espresso_version = "3.5.1"
+    multidex_version = "2.0.1"
+
+    cardview_version = "1.0.0"
+    recyclerview_version = "1.2.1"
+    material_version = "1.8.0"
+    glide_version = "4.11.0"
+
+    room_version = "2.4.2"
+
+    retrofit_version = "2.9.0"
+    logging_interceptor_version = '4.9.1'
+
+    kotlin_coroutines_version = "1.4.2"
+    lifecycle_version = "2.5.1"
+
+    activity_ktx_version = "1.2.3"
+    fragment_ktx_version = '1.3.4'
+
+    hilt_version = '2.46'
 }
