--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ ext{
     recyclerview_version = "1.2.1"
     material_version = "1.8.0"
     glide_version = "4.11.0"
+    nav_version = "2.3.0"
 
     room_version = "2.4.2"
 
