feat: create functionality to show games on game screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+    kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.4.2"
     androidTestImplementation "androidx.room:room-testing:$room_version"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
