--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,9 @@ dependencies {
     // Hilt testing
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    testImplementation "org.mockito:mockito-core:3.3.3"
+    testImplementation "org.mockito:mockito-inline:2.8.47"
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.10.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlin_coroutines_version"
 }
